<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/expanded_title_margin"
            app:expandedTitleMarginStart="@dimen/expanded_title_margin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image_movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_backdrop_height"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thin_height_movie_title"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="com.example.yasuaki.movieseeker.ui.detail.DetailMovieActivity">

            <ImageView
                android:id="@+id/image_movie_thumbnail"
                style="@style/UiSmallElements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_right_left"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@android:drawable/zoom_plate"/>

            <TextView
                android:id="@+id/text_release_year"
                style="@style/UiSmallElements"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintLeft_toRightOf="@+id/image_movie_thumbnail"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1999"/>

            <TextView
                android:id="@+id/text_movie_rating"
                style="@style/UiSmallElements"
                android:layout_marginLeft="@dimen/zero_dimen"
                android:layout_marginStart="@dimen/zero_dimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/text_release_year"
                app:layout_constraintTop_toBottomOf="@+id/text_release_year"
                tools:text="500000"/>

            <ImageView
                android:id="@+id/button_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_above_star"
                android:src="@drawable/ic_star_black_36dp"
                android:tint="@color/grayColor"
                android:contentDescription="@string/description_favorite_btn"
                app:layout_constraintLeft_toLeftOf="@+id/text_click"
                app:layout_constraintRight_toRightOf="@+id/text_click"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_rating"/>

            <TextView
                android:id="@+id/text_click"
                style="@style/UiSmallElements"
                android:layout_marginLeft="@dimen/zero_dimen"
                android:layout_marginStart="@dimen/zero_dimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_message_favorite"
                app:layout_constraintLeft_toLeftOf="@+id/text_movie_rating"
                app:layout_constraintTop_toBottomOf="@+id/button_favorite"/>

            <TextView
                android:id="@+id/text_movie_synopsis"
                style="@style/UiSmallElements"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/text_body"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_movie_thumbnail"
                tools:layout_constraintLeft_toRightOf="parent"
                tools:text="Super interesting!!!!!!!!!!!!!!!!!!!!!!!!!!!"/>

            <!-- Trailer-->
            <TextView
                android:id="@+id/trailer_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_bottom"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-medium"
                android:paddingEnd="@dimen/activity_padding"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingStart="@dimen/activity_padding"
                android:text="@string/text_trailers_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_middle"
                android:textStyle="normal|bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_synopsis"/>

            <TextView
                android:id="@+id/tv_error_message_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_right_left"
                android:layout_marginStart="@dimen/margin_right_left"
                android:layout_marginTop="@dimen/margin_top_bottom"
                android:paddingEnd="@dimen/activity_padding"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingStart="@dimen/activity_padding"
                android:text="@string/error_loading_trailer"
                android:textSize="@dimen/textsize_middle"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view_trailer"
                app:layout_constraintLeft_toLeftOf="@+id/recycler_view_trailer"
                app:layout_constraintRight_toRightOf="@+id/recycler_view_trailer"
                app:layout_constraintTop_toTopOf="@+id/recycler_view_trailer"/>

            <ProgressBar
                android:id="@+id/progress_trailer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view_trailer"
                app:layout_constraintLeft_toLeftOf="@+id/recycler_view_trailer"
                app:layout_constraintRight_toRightOf="@+id/recycler_view_trailer"
                app:layout_constraintTop_toTopOf="@+id/recycler_view_trailer"/>

            <TextView
                android:id="@+id/text_no_trailers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:paddingEnd="@dimen/activity_padding"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingStart="@dimen/activity_padding"
                android:text="@string/text_no_trailer"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_middle"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailer_label"/>

            <!-- Reviews -->
            <TextView
                android:id="@+id/review_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-medium"
                android:paddingEnd="@dimen/margin_right_left"
                android:paddingLeft="@dimen/margin_right_left"
                android:paddingRight="@dimen/margin_right_left"
                android:paddingStart="@dimen/margin_right_left"
                android:text="@string/text_reviews_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_middle"
                android:textStyle="normal|bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_trailer"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/review_label"
                tools:text="soooo goood"/>

            <TextView
                android:id="@+id/tv_error_message_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_right_left"
                android:layout_marginStart="@dimen/margin_right_left"
                android:layout_marginTop="@dimen/margin_top_bottom"
                android:text="@string/error_loading_reviews"
                android:textSize="@dimen/textsize_middle"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view_content"
                app:layout_constraintLeft_toLeftOf="@+id/recycler_view_content"
                app:layout_constraintRight_toRightOf="@+id/recycler_view_content"
                app:layout_constraintTop_toTopOf="@+id/recycler_view_content"/>

            <ProgressBar
                android:id="@+id/progress_review"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/recycler_view_content"
                app:layout_constraintLeft_toLeftOf="@+id/recycler_view_content"
                app:layout_constraintRight_toRightOf="@+id/recycler_view_content"
                app:layout_constraintTop_toTopOf="@+id/recycler_view_content"/>

            <TextView
                android:id="@+id/text_no_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:paddingEnd="@dimen/activity_padding"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingStart="@dimen/activity_padding"
                android:text="@string/text_no_review"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_middle"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/review_label"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_trailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailer_label"
                tools:src="@mipmap/ic_launcher"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>